Fix FielDialog overflow in Firefox. Closes #66

--- a/src/client/ui/modals/FileDialogModalContainer.scss
+++ b/src/client/ui/modals/FileDialogModalContainer.scss
@@ -8,6 +8,8 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+  // This forces firefox to give the contents a proper height.
+  overflow: hidden;
 }
 
 :local(.leftColumn) {
